# nanoLLM

./: LICENSE  README.md  pyproject.toml
config/: model_config.py
model/decoders/: gpt-2.py
model/layers/: attention.py  feedforward.py
