[project]
name = "nanollm"
version = "0.1.0"
description = "minimal LLM framework built from scratch in Pytorch"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "numpy>=2.2.6",
    "pyyaml>=6.0.3",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "torch==2.4",
    "tqdm>=4.67.3",
]
